--- a/index.html
+++ b/index.html
@@ -407,6 +407,94 @@
                 "reviewCount": "127",
                 "bestRating": "5",
                 "worstRating": "1"
+            },
+            {
+                "@type": "Course",
+                "@id": "https://forge-calculator.com/#course",
+                "name": "The Forge Mastery Guide",
+                "description": "Complete guide to mastering The Forge Roblox game - from basic mining to legendary weapon crafting",
+                "provider": {
+                    "@id": "https://forge-calculator.com/#organization"
+                },
+                "about": {
+                    "@id": "https://forge-calculator.com/#forge-game"
+                },
+                "teaches": [
+                    "Ore mining strategies",
+                    "Weapon and armor crafting",
+                    "Optimal ore combinations",
+                    "Trait activation techniques",
+                    "Advanced forging methods"
+                ],
+                "hasCourseInstance": {
+                    "@type": "CourseInstance",
+                    "courseMode": "online",
+                    "courseWorkload": "PT2H",
+                    "instructor": {
+                        "@type": "Organization",
+                        "@id": "https://forge-calculator.com/#organization"
+                    }
+                },
+                "offers": {
+                    "@type": "Offer",
+                    "price": "0",
+                    "priceCurrency": "USD",
+                    "availability": "https://schema.org/InStock"
+                }
+            },
+            {
+                "@type": "ItemList",
+                "@id": "https://forge-calculator.com/#tools-list",
+                "name": "The Forge Tools & Resources",
+                "description": "Complete collection of tools and guides for The Forge Roblox game",
+                "numberOfItems": 8,
+                "itemListElement": [
+                    {
+                        "@type": "ListItem",
+                        "position": 1,
+                        "item": {
+                            "@type": "SoftwareApplication",
+                            "name": "Forge Calculator",
+                            "url": "https://forge-calculator.com/"
+                        }
+                    },
+                    {
+                        "@type": "ListItem",
+                        "position": 2,
+                        "item": {
+                            "@type": "WebPage",
+                            "name": "Ore Guide",
+                            "url": "https://forge-calculator.com/ore"
+                        }
+                    },
+                    {
+                        "@type": "ListItem",
+                        "position": 3,
+                        "item": {
+                            "@type": "WebPage",
+                            "name": "Weapons Guide",
+                            "url": "https://forge-calculator.com/weapons"
+                        }
+                    },
+                    {
+                        "@type": "ListItem",
+                        "position": 4,
+                        "item": {
+                            "@type": "WebPage",
+                            "name": "Armor Guide", 
+                            "url": "https://forge-calculator.com/armor"
+                        }
+                    },
+                    {
+                        "@type": "ListItem",
+                        "position": 5,
+                        "item": {
+                            "@type": "WebPage",
+                            "name": "Active Codes",
+                            "url": "https://forge-calculator.com/codes"
+                        }
+                    }
+                ]
             }
         ]
     }
