--- a/weapons.html
+++ b/weapons.html
@@ -126,6 +126,94 @@
                     "gamePlatform": "Roblox"
                 },
                 "isPartOf": {"@id": "https://forge-calculator.com/weapons#webpage"}
+            },
+            {
+                "@type": "BreadcrumbList",
+                "@id": "https://forge-calculator.com/weapons#breadcrumb",
+                "itemListElement": [
+                    {
+                        "@type": "ListItem",
+                        "position": 1,
+                        "name": "Home",
+                        "item": "https://forge-calculator.com/"
+                    },
+                    {
+                        "@type": "ListItem",
+                        "position": 2,
+                        "name": "Weapons",
+                        "item": "https://forge-calculator.com/weapons"
+                    }
+                ]
+            },
+            {
+                "@type": "Recipe",
+                "@id": "https://forge-calculator.com/weapons#legendary-sword-recipe",
+                "name": "Legendary Sword Crafting Recipe",
+                "description": "How to craft a legendary sword in The Forge using optimal ore combinations",
+                "image": {
+                    "@type": "ImageObject",
+                    "url": "https://forge-calculator.com/favicon-120x120.png"
+                },
+                "author": {
+                    "@id": "https://forge-calculator.com/#organization"
+                },
+                "datePublished": "2026-01-10",
+                "prepTime": "PT10M",
+                "cookTime": "PT5M",
+                "totalTime": "PT15M",
+                "recipeCategory": "Gaming",
+                "recipeCuisine": "Virtual",
+                "recipeYield": "1 Legendary Sword",
+                "recipeIngredient": [
+                    "15x Snowite Ore",
+                    "10x Fire Crystal Ore",
+                    "8x Mythril Ore",
+                    "5x Diamond Ore",
+                    "3x Legendary Core"
+                ],
+                "recipeInstructions": [
+                    {
+                        "@type": "HowToStep",
+                        "name": "Gather Materials",
+                        "text": "Mine the required ores from World 3 (The Peak). Focus on high-tier mining areas for better ore quality."
+                    },
+                    {
+                        "@type": "HowToStep", 
+                        "name": "Prepare Forge",
+                        "text": "Access the legendary forge station. Ensure you have sufficient crafting level and forge upgrades."
+                    },
+                    {
+                        "@type": "HowToStep",
+                        "name": "Combine Ores",
+                        "text": "Add ores in the optimal order: Snowite first for base stats, then Fire Crystal for damage, Mythril for durability."
+                    },
+                    {
+                        "@type": "HowToStep",
+                        "name": "Activate Traits",
+                        "text": "Use the Forge Calculator to verify trait activation percentages before finalizing the craft."
+                    },
+                    {
+                        "@type": "HowToStep",
+                        "name": "Complete Forging",
+                        "text": "Execute the forge process. The legendary sword will have enhanced stats and special abilities."
+                    }
+                ],
+                "nutrition": {
+                    "@type": "NutritionInformation",
+                    "calories": "0 (Virtual Recipe)"
+                },
+                "aggregateRating": {
+                    "@type": "AggregateRating",
+                    "ratingValue": "4.8",
+                    "reviewCount": "45",
+                    "bestRating": "5"
+                },
+                "video": {
+                    "@type": "VideoObject",
+                    "name": "Legendary Sword Crafting Tutorial",
+                    "description": "Step-by-step video guide for crafting legendary swords",
+                    "contentUrl": "https://forge-calculator.com/videos/legendary-sword-tutorial"
+                }
             }
         ]
     }
