--- a/ore/index.html
+++ b/ore/index.html
@@ -24,11 +24,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Press+Start+2P&family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet">
     <meta name="description" content="Complete guide to The Forge ores - Learn about all ore types, traits, combinations, and how to use them effectively in The Forge Roblox game.">
     <meta name="keywords" content="the forge ore, forge ore guide, roblox forge ores, the forge ore types, forge ore combinations, the forge ore traits">
-    <link rel="canonical" href="https://forge-calculator.com/ore/">
+    <link rel="canonical" href="https://forge-calculator.com/ore">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://forge-calculator.com/ore/">
+    <meta property="og:url" content="https://forge-calculator.com/ore">
     <meta property="og:title" content="The Forge Ore Guide - Complete Ore Types & Combinations">
     <meta property="og:description" content="Master ore combinations in The Forge. Learn about all ore types, traits, and optimal combinations for crafting legendary weapons and armor.">
     
