--- a/wiki/index.html
+++ b/wiki/index.html
@@ -19,11 +19,11 @@
     <link rel="apple-touch-icon" sizes="120x120" href="/favicon-120x120.png">
     <meta name="description" content="The Forge Wiki - Complete knowledge base for The Forge Roblox game. Find guides, recipes, ores, weapons, armor, and more.">
     <meta name="keywords" content="the forge wiki, forge roblox wiki, the forge guide, forge knowledge base, roblox forge encyclopedia">
-    <link rel="canonical" href="https://forge-calculator.com/wiki/">
+    <link rel="canonical" href="https://forge-calculator.com/wiki">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://forge-calculator.com/wiki/">
+    <meta property="og:url" content="https://forge-calculator.com/wiki">
     <meta property="og:title" content="The Forge Wiki - Complete Knowledge Base">
     <meta property="og:description" content="Your comprehensive guide to The Forge Roblox game. Explore ores, recipes, crafting guides, and more.">
     
