--- a/ru/index.html
+++ b/ru/index.html
@@ -20,7 +20,7 @@
     <link rel="apple-touch-icon" sizes="120x120" href="/favicon-120x120.png">
     <meta name="description" content="Калькулятор The Forge - Бесплатный инструмент для расчета крафта в игре The Forge Roblox. Рассчитывайте ресурсы, материалы и затраты мгновенно. Оптимизируйте свою стратегию ковки.">
     <meta name="keywords" content="калькулятор the forge, the forge калькулятор, калькулятор кузницы the forge, forge calculator русский, калькулятор роблокс the forge, roblox the forge калькулятор, калькулятор крафта the forge, игра the forge калькулятор, роблокс кузница калькулятор, калькулятор the forge русский">
-    <link rel="canonical" href="https://forge-calculator.com/ru/">
+    <link rel="canonical" href="https://forge-calculator.com/ru">
     
     <!-- Yandex Verification -->
     <meta name="yandex-verification" content="8c7faf20a3b2d8e3" />
@@ -32,7 +32,7 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://forge-calculator.com/ru/">
+    <meta property="og:url" content="https://forge-calculator.com/ru">
     <meta property="og:title" content="Калькулятор The Forge Roblox">
     <meta property="og:description" content="Освойте создание оружия и брони с помощью Калькулятора The Forge. Оптимизируйте комбинации руд и настройки характеристик с расчетами в реальном времени для The Forge в Roblox.">
     <meta property="og:site_name" content="Калькулятор The Forge Roblox">
