🔧 SEO优化: 实施Clean URL结构和查询参数处理
主要更改:
✅ Clean URL实施:
- 删除codes.html，创建codes/index.html
- 统一使用/codes而非codes.html
- 消除重定向，直接访问目标内容

✅ 查询参数处理:
- 在vercel.json中添加查询参数重定向规则
- 处理ref, utm_*, fbclid等跟踪参数
- 解决'Alternate page with proper canonical tag'问题

✅ URL标准化:
- 更新所有内部链接使用正确URL
- 修复sitemap.xml中的URL结构
- 更新配置文件(ahrefs-urls.txt, 提交脚本等)

✅ 内容优化:
- 更新llms.txt和llms-full.txt中的链接
- 修复wiki/index.html中的搜索结果链接
- 统一feedback.html中的选项值

预期SEO效果:
- 消除Google Search Console中的'Alternate page'状态
- 改善页面索引状态
- 提升用户体验和页面加载速度
- 建立更清洁的URL结构

--- a/feedback.html
+++ b/feedback.html
@@ -207,7 +207,7 @@
                         <option value="wiki">Wiki</option>
                         <option value="codes">Codes</option>
                         <option value="recipes">Recipes</option>
-                        <option value="ore-guide">Ore Guide</option>
+                        <option value="ore">Ore Guide</option>
                         <option value="blog">Blog</option>
                         <option value="other">Other</option>
                     </select>
