--- a/recipes/index.html
+++ b/recipes/index.html
@@ -34,7 +34,7 @@
     
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://forge-calculator.com/recipes/">
+    <meta name="twitter:url" content="https://forge-calculator.com/recipes">
     <meta name="twitter:title" content="The Forge Recipes - Complete Crafting Recipe Database">
     <meta name="twitter:description" content="Discover the best crafting recipes for The Forge. Complete database of weapon and armor recipes with ore combinations.">
     
