--- a/ru/index.html
+++ b/ru/index.html
@@ -70,9 +70,9 @@
             window.location.href = '/';
         } else if (currentPath.startsWith('/ru/recipes/')) {
             if (currentPath.includes('best-recipes')) {
-                window.location.href = '/recipes/best-recipes.html';
+                window.location.href = '/recipes/best-recipes';
             } else {
-                window.location.href = '/recipes/';
+                window.location.href = '/recipes';
             }
         } else if (currentPath === '/ru/crafts.html') {
             window.location.href = '/'; // 英语版本没有单独的crafts页面
