--- a/ru/recipes/index.html
+++ b/ru/recipes/index.html
@@ -34,7 +34,7 @@
     
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://forge-calculator.com/ru/recipes/">
+    <meta name="twitter:url" content="https://forge-calculator.com/ru/recipes">
     <meta name="twitter:title" content="Рецепты The Forge - Полная База Данных Рецептов Крафта">
     <meta name="twitter:description" content="Откройте для себя лучшие рецепты крафта для The Forge. Полная база данных рецептов оружия и брони с комбинациями руд.">
     
@@ -65,9 +65,9 @@
             window.location.href = '/';
         } else if (currentPath.startsWith('/ru/recipes/')) {
             if (currentPath.includes('best-recipes')) {
-                window.location.href = '/recipes/best-recipes.html';
+                window.location.href = '/recipes/best-recipes';
             } else {
-                window.location.href = '/recipes/';
+                window.location.href = '/recipes';
             }
         } else if (currentPath.startsWith('/ru/crafts')) {
             window.location.href = '/';
@@ -652,9 +652,9 @@
                 window.location.href = '/';
             } else if (currentPath.startsWith('/ru/recipes/')) {
                 if (currentPath.includes('best-recipes')) {
-                    window.location.href = '/recipes/best-recipes.html';
+                    window.location.href = '/recipes/best-recipes';
                 } else {
-                    window.location.href = '/recipes/';
+                    window.location.href = '/recipes';
                 }
             } else if (currentPath === '/ru/crafts.html') {
                 window.location.href = '/'; // 英语版本没有单独的crafts页面
