🎨 Phase 1 Design Optimization Complete
Major visual improvements and design system enhancements:

✨ Typography System Upgrade
- Increased H1 font size (2.5rem → 4.5rem) with enhanced glow effects
- Added gradient text effects with shimmer animation
- Improved heading hierarchy with better font weights and spacing
- Enhanced text shadows for better depth and readability

🎯 Hero Section Redesign
- Multi-layer radial gradient background with atmosphere animation
- Gradient text with shimmer effect on main title
- Added decorative elements and enhanced shadows
- Increased padding and improved layout spacing

🔘 Button System Enhancement
- Larger button sizes with improved padding
- Dynamic lightning icon on hover
- Glossy sweep animation effect
- Enhanced glow and shadow effects
- Better hover states with scale and lift animations

🎴 Feature Cards Optimization
- Rainbow border gradient effect
- Decorative sparkle elements
- Staggered entrance animations
- Enhanced hover effects (lift 10px + scale 1.03)
- Improved card spacing and padding

📦 Content Sections Upgrade
- Top gradient line and bottom glow effects
- Animated hammer icon on section titles
- Enhanced shadows and border effects
- Better hover states with lift animation

🧭 Navigation Modernization
- Gradient background on hover
- Glossy sweep animation
- Larger buttons with better spacing
- Enhanced font weight and sizing

❓ FAQ Section Enhancement
- Left-side colored bar animation
- Slide-right effect on hover
- Improved typography and spacing
- Better visual hierarchy

🎨 New Tools Section
- Removed all inline styles
- Created dedicated CSS classes
- Added hover effects and animations
- Improved card design with gradients

📊 Design System Improvements
- Unified color system (12 core colors)
- Consistent spacing system
- Standardized animation timings
- Better component organization

🚀 Performance & Best Practices
- Zero inline styles in HTML (CSS-only approach)
- Optimized animations using transform/opacity
- Res

--- a/index.html
+++ b/index.html
@@ -510,6 +510,8 @@
                 <a href="/recipes">Recipes</a>
                 <a href="/codes">Codes</a>
                 <a href="/">Calculator</a>
+                <a href="/tier-list-maker">Tier Lists</a>
+                <a href="/reroll-calculator">Reroll</a>
                 <a href="/ore">Ore</a>
                 <a href="/wiki">Wiki</a>
                 <a href="/weapons">Weapons</a>
@@ -523,10 +525,31 @@
     </header>
 
     <!-- Hero Section -->
-    <section class="hero">
+    <section class="hero page-enter">
         <div class="container">
-            <h2>The Forge Calculator</h2>
-            <p>Master your weapon and armor crafting with The Forge Calculator - a comprehensive tool that helps you optimize ore combinations and trait setups in The Forge Roblox game. Whether you're new to the forging system or an expert player perfecting your builds, our forge calculator provides real-time calculations for all your crafting needs.</p>
+            <h2>🔥 The Forge Calculator 🔥</h2>
+            <p>Master your weapon and armor crafting with The Forge Calculator - the ultimate tool for optimizing ore combinations and trait setups in The Forge Roblox game. Whether you're forging your first weapon or perfecting legendary builds, our calculator provides real-time calculations and expert guidance for all your crafting needs.</p>
+        </div>
+    </section>
+
+    <!-- New Tools Highlight -->
+    <section class="new-tools-section">
+        <div class="container">
+            <h2 class="new-tools-title">🆕 New Tools Available!</h2>
+            <div class="new-tools-grid">
+                <div class="new-tool-card">
+                    <div class="new-tool-icon">🏆</div>
+                    <h3>Tier List Maker</h3>
+                    <p>Create and share rankings for weapons, armor, and pickaxes. Compare equipment effectiveness and discover the best gear combinations.</p>
+                    <a href="/tier-list-maker" class="new-tool-button">Try Tier List Maker →</a>
+                </div>
+                <div class="new-tool-card">
+                    <div class="new-tool-icon">🎲</div>
+                    <h3>Reroll Calculator</h3>
+                    <p>Optimize your reforging strategy with probability analysis, cost calculations, and success rate predictions for equipment upgrades.</p>
+                    <a href="/reroll-calculator" class="new-tool-button">Try Reroll Calculator →</a>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -584,38 +607,38 @@
     <!-- Features Section -->
     <section id="features" class="features">
         <div class="container">
-            <h2>The Forge Calculator Features</h2>
+            <h2>⚡ Powerful Features ⚡</h2>
             <div class="features-grid">
-                <div class="feature-card">
+                <div class="feature-card stagger-1">
                     <h3>⚔️ Weapon & Armor Classes</h3>
-                    <p>The Forge Calculator shows which weapon or armor class you'll craft in Roblox Forge based on your ore combinations, helping you plan your builds effectively.</p>
+                    <p>The Forge Calculator instantly shows which weapon or armor class you'll craft in Roblox Forge based on your ore combinations, helping you plan your builds effectively and avoid wasted resources.</p>
                 </div>
-                <div class="feature-card">
+                <div class="feature-card stagger-2">
                     <h3>📊 Optimal Ore Amounts</h3>
-                    <p>Our Roblox Forge calculator calculates the optimal number of ores needed to increase chances of crafting specific weapon or armor sets with desired traits.</p>
+                    <p>Our Roblox Forge calculator calculates the optimal number of ores needed to increase chances of crafting specific weapon or armor sets with desired traits and maximum efficiency.</p>
                 </div>
-                <div class="feature-card">
+                <div class="feature-card stagger-3">
                     <h3>⚡ Real-Time Results</h3>
-                    <p>The Forge Calculator processes your inputs and presents results of potential crafts in real time, eliminating manual calculations.</p>
+                    <p>The Forge Calculator processes your inputs and presents results of potential crafts in real time, eliminating manual calculations and giving you instant feedback as you experiment.</p>
                 </div>
-                <div class="feature-card">
+                <div class="feature-card stagger-1">
                     <h3>🎯 Modifier Multipliers</h3>
-                    <p>See final modifier multipliers and trait strength percentages with our Roblox Forge calculator to optimize your forging strategy.</p>
+                    <p>See final modifier multipliers and trait strength percentages with our Roblox Forge calculator to optimize your forging strategy and create the most powerful equipment possible.</p>
                 </div>
-                <div class="feature-card">
+                <div class="feature-card stagger-2">
                     <h3>✨ Trait Activation</h3>
-                    <p>The Roblox Forge Calculator shows whether ore traits will be active and how strong the applied traits will be for your craft.</p>
+                    <p>The Roblox Forge Calculator shows whether ore traits will be active and how strong the applied traits will be for your craft, ensuring you get the bonuses you expect.</p>
                 </div>
-                <div class="feature-card">
+                <div class="feature-card stagger-3">
                     <h3>🔧 Complete Coverage</h3>
-                    <p>Our forge calculator supports all ore combinations and trait setups for comprehensive forging assistance in The Forge Roblox game.</p>
+                    <p>Our forge calculator supports all ore combinations and trait setups for comprehensive forging assistance in The Forge Roblox game, from basic iron to legendary materials.</p>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- What Is Section -->
-    <section id="what-is" class="content-section">
+    <section id="what-is" class="content-section stagger-1">
         <div class="container">
             <h2>What is The Forge Calculator?</h2>
             <p>The Forge Calculator is an all-in-one tool designed specifically for players forging weapons and armor in The Forge on Roblox. Our comprehensive forge calculator helps you determine optimal ore combinations and trait setups without manual calculations. Whether you're a beginner learning the forging system or an experienced player seeking optimal builds, The Forge Calculator takes the guesswork out of crafting.</p>
@@ -625,7 +648,7 @@
     </section>
 
     <!-- How To Section -->
-    <section id="how-to" class="content-section">
+    <section id="how-to" class="content-section stagger-2">
         <div class="container">
             <h2>How to Use The Forge Calculator</h2>
             <p>Using The Forge Calculator is straightforward and designed to save you time when forging weapons and armor in Roblox. Follow these simple steps to optimize your crafting strategy:</p>
@@ -642,7 +665,7 @@
     </section>
 
     <!-- Why Section -->
-    <section id="why" class="content-section">
+    <section id="why" class="content-section stagger-3">
         <div class="container">
             <h2>Why Use The Forge Calculator?</h2>
             <p>The Forge Roblox game has intricate forging mechanics with complex ore combinations and trait systems. The Forge Calculator solves this complexity by providing instant, accurate calculations that help you make informed decisions about your weapon and armor builds without manual calculations.</p>
@@ -652,9 +675,9 @@
     </section>
 
     <!-- FAQ Section -->
-    <section id="faq" class="faq">
+    <section id="faq" class="faq content-section stagger-4">
         <div class="container">
-            <h2>Frequently Asked Questions</h2>
+            <h2>❓ Frequently Asked Questions</h2>
             <div class="faq-item">
                 <h3>Is The Forge Calculator accurate for The Forge on Roblox?</h3>
                 <p>Yes, The Forge Calculator uses the latest game data to provide accurate ore combination calculations, modifier multipliers, and trait percentages for all weapons and armor in The Forge. We regularly update our forge calculator to reflect any game changes.</p>
